--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@
 }
 
 .container{
-    width: 80%;
-    margin: auto;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 .center{
@@ -35,6 +35,18 @@
     flex-wrap: wrap;
 }
 
+#demo-applications,
+#strategic-planning,
+#testimonials,
+#benefits,
+#about-us,
+#its-free,
+nav{
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+}
+
+
 .width-100{
     width: 100%;
 }
@@ -58,6 +70,8 @@
 header{
     background-color: #0084FD;
     padding: 15px 0px;
+    position: sticky;
+    top: 0;
 }
 
 nav{
@@ -99,12 +113,13 @@ nav{
     background-color: white;
     color: black;
     border-radius: 20px;
-    padding: 9px;
+    padding: 8px 12px;
 }
 
 #demo-applications{
     display: flex;
     flex-wrap: wrap;
+    padding-bottom: 30px
 }
 
 .card-blue{
@@ -247,36 +262,22 @@ nav{
     border-radius: 50%;
 }
 
-blockquote {
-    font-family: Georgia, serif;
-    position: relative;
-    margin: 0.5em;
-    padding: 0.5em 2em 0.5em 3em;
+blockquote{
     color: white;
-    line-height: 1.4em;
 }
 
 blockquote:before{
-    font-family: Georgia, serif;
-    color: white;
-    position: absolute;
-    font-size: 4em;
-    line-height: 1;
-    top: -5px;
-    left: 45px;
-    content: "\201C";
+    font-family: "Font Awesome 6 Free";
+    content: "\f10d";
+    font-weight: 900;
+    margin-right: 10px;
 }
 
 blockquote:after{
-    font-family: Georgia, serif;
-    position: absolute;
-    color: white;
-    float: right;
-    font-size: 4em;
-    line-height: 1;
-    right: 65px;
-    bottom: -0.5em;
-    content: "\201D";
+    font-family: "Font Awesome 6 Free";
+    content: "\f10e";
+    font-weight: 900;
+    margin-left: 10px;
 }
 
 #testimonials h3{
@@ -286,7 +287,151 @@ blockquote:after{
 
 #benefits{
     background-color: #9792e4;
+    padding-bottom: 2rem;
 }
+
+
+
+.benefits-card-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.white-card-2{
+    width: 100%;
+    padding: 2rem;
+    background-color: white;
+    border-radius: 20px;
+    margin-bottom: 1rem;
+}
+
+.title-section-white{
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+}
+
+.white-card-2 h2, h3{
+    color: #9792E4;
+}
+
+.white-card-2 h2{
+    font-size: 4rem;
+}
+
+.white-card-2 h3{
+    font-size: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+}
+
+.white-card-2 p{
+    color: #737373;
+    margin-bottom: 2rem;
+}
+
+.white-card-2 a{
+    background-color: #9792E4;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    text-decoration: none;
+    border-radius: 20px; 
+}
+
+#about-us{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.about-us-box-1{
+    width: 100%;
+    padding: 2rem;
+}
+
+.about-us-box-2{
+    width: 100%;
+    padding: 2rem;
+}
+
+.about-us-box-2 img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.title-section-purple{
+    color: #9792E4;
+    font-size: 4rem;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+}
+
+.about-us-box-1 p{
+    font-size: 1.3rem;
+    line-height: 1.9em;
+}
+
+.about-us-box-2 h3{
+    font-size: 1.8rem;
+    margin-bottom: 2rem;
+}
+
+.about-us-box-2 a{
+    background-color: #9792E4;
+    color: white;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    text-decoration: none;
+    border-radius: 20px; 
+}
+
+#quotes-img-about-us{
+    position: relative;
+}
+
+#quotes-img-about-us i{
+    position: absolute;
+    top: 0;
+    right: 4rem;
+    font-size: 4rem;
+    color: #9792E4;
+}
+
+#its-free{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-align: center;
+    background-color: #9792E4;
+}
+
+#section-free-1-h2{
+    font-size: 3rem;
+    color: white;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+#section-free-2-h2{
+    font-size: 5rem;
+    color: #fdc15f;
+    padding-bottom: 2rem;
+}
+
+#its-free p{
+    color: white;
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+}
+
 
 
 
@@ -294,7 +439,7 @@ blockquote:after{
         MEDIA QUERY
  *************************/
 
-/* tablet */
+/********* tablet ********/
  
  @media screen and (min-width: 480px){
     #demo-applications{
@@ -319,14 +464,25 @@ blockquote:after{
 
     .card-box-2{
         width: 70%;
-        padding-top: 50px;
+        padding-top: 70px;
+    }
+
+    .white-card-2{
+        width: calc((100% / 2) - 1%);
+    }
+
+    .about-us-box-1{
+        width: 50%;
+    }
+    
+    .about-us-box-2{
+        width: 50%;
     }
  }
 
- /* Laptop */
+ /******** Laptop ********/
 
- @media screen and (min-width: 1140px){
-    .container{width: 60%;}
+ @media screen and (min-width: 992px){
 
     .ul-list{
         display: inline-block;
@@ -353,11 +509,16 @@ blockquote:after{
     }
 
     .white-card{
-        width: 30%;
+        width: 40%;
+        align-self: flex-end;
+    }
+
+    .white-card img{
+        width: 50%;
     }
 
     .no-bg-card h2{
-        margin-top: 150px;
+        margin-top: 100px;
     }
 
     .testimonials-card{
@@ -370,7 +531,7 @@ blockquote:after{
 
     .card-box-2{
         width: 70%;
-        padding-top: 50px;
+        padding-top: 70px;
     }
 
     .width-100{
@@ -379,5 +540,17 @@ blockquote:after{
 
     .ta-start{
         text-align: start;
+    }
+
+    .white-card-2{
+        width: calc((100% / 3) - 1%);
+    }
+
+    .about-us-box-1{
+        width: 70%;
+    }
+    
+    .about-us-box-2{
+        width: 30%;
     }
  }
