--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,12 +35,17 @@
     flex-wrap: wrap;
 }
 
+.block{
+    display: block;
+}
+
 #demo-applications,
 #strategic-planning,
 #testimonials,
 #benefits,
 #about-us,
 #its-free,
+footer,
 nav{
     padding-right: 2.5rem;
     padding-left: 2.5rem;
@@ -72,6 +77,7 @@ header{
     padding: 15px 0px;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 nav{
@@ -290,8 +296,6 @@ blockquote:after{
     padding-bottom: 2rem;
 }
 
-
-
 .benefits-card-section{
     display: flex;
     flex-wrap: wrap;
@@ -407,8 +411,8 @@ blockquote:after{
 }
 
 #its-free{
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     text-align: center;
     background-color: #9792E4;
 }
@@ -432,7 +436,54 @@ blockquote:after{
     margin-bottom: 1rem;
 }
 
+.btn-white-big{    
+    background-color: white;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    border-radius: 40px;    
+    display: inline-block;
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
+}
 
+.btn-white-big a{
+    text-decoration: none;
+    color: #9792E4;
+    font-size: 1.1rem;
+}
+
+#its-free span{
+    color: white;
+}
+
+.block a{
+    color: white;
+}
+
+.grey-text{
+    color: #d5d4f4;
+}
+
+footer{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-color: #333333;
+    text-align: center;
+}
+
+footer p:first-child{
+    margin-bottom: 3rem;
+}
+
+footer p{
+    color: white;
+}
+
+footer p a{
+    color: #9792E4;
+}
 
 
 /*************************
