Cambio Font e completamento refactoring

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Golos+Text&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -7,6 +9,10 @@
 .container{
     max-width: 1100px;
     margin: 0 auto;
+}
+
+body{
+    font-family: 'Golos Text', sans-serif;
 }
 
 .center{
@@ -72,6 +78,8 @@ nav{
     margin-bottom: 40px;
 }
 
+/******** sezione header + nav *********/
+
 header{
     background-color: #0084FD;
     padding: 15px 0px;
@@ -122,6 +130,8 @@ nav{
     padding: 8px 12px;
 }
 
+/******** sezione demo applications *********/
+
 #demo-applications{
     display: flex;
     flex-wrap: wrap;
@@ -167,7 +177,7 @@ nav{
 }
 
 .card-blue div img{
-    width: 90%;
+    width: 100%;
     display: block;
 }
 
@@ -178,6 +188,8 @@ nav{
     color: #0084fd;
     margin-bottom: 25px;
 }
+
+/******** sezione strategic planning *********/
 
 #strategic-planning{
     display: flex;
@@ -235,6 +247,8 @@ nav{
     text-decoration: none;
 }
 
+/******** sezione testimonials ********/
+
 #testimonials{
     text-align: center;
     padding-top: 60px;
@@ -290,6 +304,7 @@ blockquote:after{
     color: white;
 }
 
+/********* sezione benefits **********/
 
 #benefits{
     background-color: #9792e4;
@@ -348,6 +363,8 @@ blockquote:after{
     border-radius: 20px; 
 }
 
+/********** sezione about us **********/
+
 #about-us{
     padding-top: 2rem;
     padding-bottom: 2rem;
@@ -398,6 +415,8 @@ blockquote:after{
     border-radius: 20px; 
 }
 
+/********* virgolette su img tonda **********/
+
 #quotes-img-about-us{
     position: relative;
 }
@@ -409,6 +428,8 @@ blockquote:after{
     font-size: 4rem;
     color: #9792E4;
 }
+
+/********** sezione it's free ***********/
 
 #its-free{
     padding-top: 3rem;
@@ -466,6 +487,8 @@ blockquote:after{
     color: #d5d4f4;
 }
 
+/******** sezione footer ***********/
+
 footer{
     padding-top: 3rem;
     padding-bottom: 3rem;
@@ -490,7 +513,7 @@ footer p a{
         MEDIA QUERY
  *************************/
 
-/********* tablet ********/
+/********* Tablet ********/
  
  @media screen and (min-width: 480px){
     #demo-applications{
